--- a/styles/style.css
+++ b/styles/style.css
@@ -403,9 +403,6 @@
   flex-direction: row;
   flex-wrap: nowrap;
   justify-content: space-between;
-
-}
-.footer__column {
 }
 
 .footer__column_content_hours {
@@ -437,6 +434,8 @@
 
 .footer__column-heading {
   margin: 0 0 20px;
+  font-size: 16px;
+  line-height: 20px;
 }
 
 .footer__column-link {
@@ -456,7 +455,6 @@
 
 .footer__column-link:last-of-type {
   margin-bottom: 0;
-
 }
 
 .footer__social-icon {
