final checklist of the project done

--- a/styles/style.css
+++ b/styles/style.css
@@ -48,6 +48,10 @@
   font-weight: bold;
 }
 
+.nav_link:hover {
+  color: #1f69c9;
+}
+
 .header__title {
   margin-top: 150px;
   margin-bottom: 32px;
@@ -84,6 +88,10 @@
 .header__link {
   color: #2f80ed;
   text-decoration: none;
+}
+
+.header__link:hover {
+  color: #1f69c9;
 }
 
 .header__address {
@@ -159,6 +167,9 @@
 .events__more {
   color: #2f80ed;
   text-decoration: none;
+}
+.events__more:hover {
+  color: #1f69c9;
 }
 
 .events__cover {
