--- a/styles/style.css
+++ b/styles/style.css
@@ -19,6 +19,7 @@
   padding: 30px 80px 40px;
   position: relative;
   box-sizing: border-box;
+  z-index: 1;
 }
 
 .nav {
@@ -43,7 +44,7 @@
 }
 
 .nav__link {
-  color: #000000;
+  color: #000;
   text-decoration: none;
   font-weight: bold;
 }
@@ -65,7 +66,7 @@
   max-width: 532px;
   font-size: 20px;
   line-height: 30px;
-  margin-top: 0;
+  margin: 0 0 0;
 }
 
 .header__image {
@@ -73,7 +74,7 @@
   right: 20px;
   top: 135px;
   max-width: 636px;
-  z-index: 1;
+  z-index: -1;
 }
 
 .header__footer {
@@ -241,6 +242,7 @@
 
 .staff {
   background-image: url("../images/staff_picks_background.jpg");
+  background-size: cover;
   padding: 100px 0 140px;
 }
 
@@ -249,7 +251,7 @@
   font-size: 44px;
   line-height: 52px;
   margin: 0 0 24px;
-  color: #ffffff;
+  color: #fff;
 }
 
 .staff__subtitle {
@@ -258,7 +260,7 @@
   line-height: 30px;
   font-weight: 400;
   margin: 0;
-  color: #ffffff;
+  color: #fff;
 }
 
 .staff__cards {
@@ -366,6 +368,7 @@
   display: flex;
   box-sizing: border-box;
   gap: 120px;
+  z-index: 1;
 }
 
 .about__title {
@@ -374,7 +377,6 @@
   font-size: 20px;
   line-height: 30px;
   font-weight: 500;
-  z-index: 1;
 }
 
 .about__content {
@@ -382,11 +384,13 @@
   line-height: 30px;
   font-weight: 400;
   max-width: 660px;
-  margin-bottom: 32px;
-  z-index: 1;
 }
 
-.about__content:last-of-type {
+.about__paragraph {
+  margin: 0 32 0;
+}
+
+.about__paragraph:last-of-type {
   margin-bottom: 0;
 }
 
@@ -398,12 +402,13 @@
   position: absolute;
   top: -121px;
   left: -91px;
+  z-index: -1;
 }
 
 .footer {
   box-sizing: border-box;
   background-color: #1f1f1f;
-  color: #ffffff;
+  color: #fff;
   padding: 60px 80px 102px 60px;
   font-size: 16px;
   line-height: 20px;
@@ -458,6 +463,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  align-items: center;
 }
 
 .footer__column-link:hover {
@@ -476,5 +482,5 @@
 .footer__copyright {
   display: block;
   padding-top: 108px;
-  margin-left: 0;
+  margin:0 0 0;
 }
