--- a/styles/style.css
+++ b/styles/style.css
@@ -387,7 +387,7 @@
 }
 
 .about__paragraph {
-  margin: 0 32px 0;
+  margin: 0 0 32px;
 }
 
 .about__paragraph:last-of-type {
@@ -409,7 +409,7 @@
   box-sizing: border-box;
   background-color: #1f1f1f;
   color: #fff;
-  padding: 60px 80px 102px 60px;
+  padding: 60px 102px 60px 80px;
   font-size: 16px;
   line-height: 20px;
 }
@@ -446,6 +446,11 @@
 }
 
 .footer__list-item {
+  margin-bottom: 16px;
+}
+
+.footer__list-item:last-of-type {
+  margin-bottom: 0;
 }
 
 .footer__column-heading {
@@ -470,10 +475,6 @@
   color: #c1c1c1;
 }
 
-.footer__column-link:last-of-type {
-  margin-bottom: 0;
-}
-
 .footer__social-icon {
   width: 16px;
   height: 16px;
@@ -482,5 +483,5 @@
 .footer__copyright {
   display: block;
   padding-top: 108px;
-  margin:0 0 0;
+  margin: 0 0 0;
 }
